# RobotTeleoperate

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c3095e1  README.md
CoordinateTransform/: CMakeLists.txt
CoordinateTransform/CoordinateTransform/: CMakeLists.txt  CoordinateTransform.cpp
CoordinateTransform/VisionPro2CrpRobotTransform/: CMakeLists.txt  VisionPro2CrpRobotTransform.cpp
CoordinateTransform/VisionPro2Ti5RobotTransform/: CMakeLists.txt  VisionPro2Ti5RobotTransform.cpp
Core/: CMakeLists.txt
Core/CanDriver/: CMakeLists.txt  CanDriver.cpp
Core/CoordinateTransform/: CMakeLists.txt  CoordinateTransform.cpp  VisionPro2CrpRobotTrans.cpp  VisionPro2CrpRobotTransform.cpp
Core/CsvWriter/: CMakeLists.txt  CsvWriter.cpp
Core/DataCollector/: CMakeLists.txt  DataCollector.cpp  VisionProCollector.cpp
Core/IKSolver/: CMakeLists.txt  CrpRobotIKSolver.cpp  CrpRobotIKSolver.hpp  IKSolver.cpp  OptimIKSolver.cpp
Core/JsonParser/: CMakeLists.txt  JsonParser.cpp
Core/WeightedMovingFilter/: CMakeLists.txt  WeightedMovingFilter.cpp
DataCollector/: CMakeLists.txt
DataCollector/VisionProCollector/: CMakeLists.txt  VisionProCollector.cpp
Demo/: CMakeLists.txt
Demo/CanDriverDemo/: CMakeLists.txt  CanDriverDemo.cpp
Demo/CasadiDemo/: CMakeLists.txt  CasadiDemo.cpp
Demo/CrpRobotDemo/: CMakeLists.txt  CrpRobotDemo.cpp  CrpRobotDemo.cpp.NHxPkc  CrpRobotDemo.cpp.TGknyh  CrpRobotDemo.cpp.tWwSOp
Demo/FastDDSDemo/: CMakeLists.txt  Demo.hpp  DemoCdrAux.hpp  DemoCdrAux.ipp  DemoPubSubTypes.cxx  DemoPubSubTypes.hpp  DemoTypeObjectSupport.cxx  DemoTypeObjectSupport.hpp  FastDDSDemo.cpp  String_.hpp  String_CdrAux.ipp  String_PubSubTypes.cxx  String_TypeObjectSupport.cxx
Demo/JsonDemo/: CMakeLists.txt  JsonDemo.cpp
Demo/MainDemo/: CMakeLists.txt  MainDemo.cpp
Demo/NLoptDemo/: CMakeLists.txt  NLoptDemo.cpp
Demo/PinocchioDemo/: CMakeLists.txt  PinocchioDemo.cpp
Demo/PybindDemo/: CMakeLists.txt  PybindDemo.cpp
Demo/PybindDemo/python/: myscript.py
Demo/SharedMemoryDemo/: CMakeLists.txt  SharedMemoryDemo.cpp
Demo/SocketDemo/: CMakeLists.txt  SocketDemo.cpp
FastDDSInterface/: CMakeLists.txt
FastDDSInterface/Demo/: CMakeLists.txt  Demo.idl  DemoCdrAux.ipp  DemoPubSubTypes.cxx  DemoTypeObjectSupport.cxx
FastDDSInterface/JointState/: CMakeLists.txt  JointState.idl  JointStateCdrAux.ipp  JointStatePubSubTypes.cxx  JointStateTypeObjectSupport.cxx
FastDDSInterface/JointStateWithoutStamp/: CMakeLists.txt  JointStateWithoutStamp.idl  JointStateWithoutStampCdrAux.ipp  JointStateWithoutStampPubSubTypes.cxx  JointStateWithoutStampTypeObjectSupport.cxx
FastDDSInterface/Ros2Bridge/: CMakeLists.txt  Ros2Bridge.cpp
FastDDSInterface/String_/: CMakeLists.txt  String_.idl  String_CdrAux.ipp  String_PubSubTypes.cxx  String_TypeObjectSupport.cxx
GUI/: CMakeLists.txt
GUI/CrpRobotBasicControlGUI/: CMakeLists.txt  CrpRobotBasicControlGUI.cpp  CrpRobotBasicControlGUI.h  CrpRobotBasicControlGUI.ui  CrpRobotBasicControlGUI.ui.autosave  main.cpp
GUI/SimpleGUI/: CMakeLists.txt  SimpleGUI.cpp  SimpleGUI.h  SimpleGUI.ui  main.cpp
GUI/Ti5RobotBasicControlGUI/: CMakeLists.txt  Ti5RobotBasicControlGUI.cpp  Ti5RobotBasicControlGUI.h  Ti5RobotBasicControlGUI.ui  main.cpp
IKSolver/: CMakeLists.txt
IKSolver/CrpRobotIKSolver/: CMakeLists.txt  CrpRobotIKSolver.cpp
IKSolver/IKSolver/: CMakeLists.txt  IKSolver.cpp
IKSolver/Ti5RobotIKSolver/: CMakeLists.txt  Ti5RobotIKSolver.cpp
Log/2025-09-22/: .~lock.20250922_191556.csv#  20250922_192346.csv
Log/2025-09-23/: 20250923_153514.csv  20250923_154606.csv  20250923_160430.csv
Log/2025-09-26/: .~lock.20250926_113405.csv#  20250926_112150.csv  20250926_113405.csv  20250926_113857.csv  20250926_114112.csv  20250926_143955.csv  20250926_150143.csv  20250926_151525.csv
Log/2025-09-29/: .~lock.20250929_162157.csv#  20250929_143819.csv  20250929_145427.csv  20250929_150824.csv  20250929_152631.csv  20250929_155758.csv  20250929_160218.csv  20250929_162157.csv  useGD_STOGO.csv
Log/2025-09-30/: .~lock.20250930_132827.csv#  20250930_130811.csv  20250930_131300.csv  20250930_131657.csv  20250930_132129.csv  20250930_132827.csv
Log/2025-10-15/: 20251015_134550.csv  20251015_143954.csv  20251015_150624.csv  20251015_151853.csv  20251015_152841.csv  20251015_154427.csv  20251015_160050.csv  20251015_160713.csv  20251015_161250.csv  20251015_162250.csv  20251015_163933.csv  20251015_165353.csv  20251015_170042.csv
Log/2025-10-19/: 20251019_150803.csv  20251019_151505.csv  20251019_180132.csv  20251019_180738.csv  20251019_181230.csv
Log/2025-11-02/: 20251102_175312.csv  20251102_175936.csv  20251102_181845.csv
Log/2025-11-10/: 20251110_141004.csv  20251110_145407.csv  20251110_155215.csv
Log/2025-11-11/: 20251111_100051.csv  20251111_100420.csv  20251111_101013.csv  20251111_101401.csv  20251111_102258.csv  20251111_105739.csv  20251111_113048.csv  20251111_151527.csv  20251111_153336.csv  20251111_153646.csv
Log/2025-11-14/: 20251114_095535.csv  20251114_095730.csv  20251114_103053.csv  20251114_104625.csv  20251114_105820.csv  20251114_110703.csv  20251114_112234.csv  20251114_112940.csv  20251114_155058.csv  20251114_161717.csv  dof_5.csv  dof_7.csv
PhysicalRobot/: CMakeLists.txt
PhysicalRobot/CrpPhysicalRobot/: CMakeLists.txt  CrpPhysicalRobot.cpp
PhysicalRobot/PhysicalRobot/: CMakeLists.txt  PhysicalRobot.cpp
PhysicalRobot/Ti5PhysicalRobot/: CMakeLists.txt  Ti5PhysicalRobot.cpp
Robot/: CMakeLists.txt
Robot/PhysicalRobot/: CMakeLists.txt  CrpPhysicalRobot.cpp  CrpPhysicalRobot.cpp.BGNQqv  CrpPhysicalRobot.hpp  PhysicalRobot.cpp
Robot/SimRobot/: CMakeLists.txt
SimRobot/: CMakeLists.txt
Teleoperate/: CMakeLists.txt
Teleoperate/CrpRobotTeleoperate/: CMakeLists.txt  CrpRobotTeleoperate.cpp
Teleoperate/RobotTeleoperate/: CMakeLists.txt  RobotTeleoperate.cpp
Teleoperate/Ti5RobotTeleoperate/: CMakeLists.txt  Ti5RobotTeleoperate.cpp
cmake/: MyInstallFuncDef.cmake  ProjectSetting.cmake  ThirdPartyConfiguration.cmake  UserConfiguration.cmake
include/: FunctionLogger.hpp  source_path.h.in
(+133 files in other folders)
